--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="bucket img2 center">매달 책 한권읽고 독후감</div>
         <div class="bucket img1 center">꾸준히 할 취미를 만들기</div>
         <div class="bucket img1 center">코딩으로 업무관련 프로그램 만들기</div>
-        <div class="bucket img2 center">코딩으로 업무외 프로그램 만들기</div>
+        <div class="bucket img2 center">병훈주임님 동아리 탈퇴시키기</div>
     </div>
 </body>
 </html>
